--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
   </head>
   <body>
     <nav
-      class="navbar navbar-expand-lg navbar-light bg-light mainheader py-0 shadow"
+      class="navbar navbar-expand-lg navbar-dark bg-primary mainheader py-0 shadow"
     >
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img src="img/Logo/logowhite.png" class="logo-img" />
+          <img src="img/Logo/logolightblack.png" class="logo-img" />
         </a>
         <button
           class="navbar-toggler"
@@ -56,12 +56,12 @@
                 Home
               </a>
               <div
-                class="dropdown-menu py-0"
+                class="dropdown-menu py-0 rounded-0 border-0 shadow"
                 aria-labelledby="dropdownMenuButton"
               >
-                <a class="nav-link dropdown-item" href="home1.html">Home 1</a>
-                <a class="nav-link dropdown-item" href="home2.html">Home 2</a>
-                <a class="nav-link dropdown-item" href="home3.html">Home 3</a>
+                <a class="dropdown-item" href="home1.html">Home 1</a>
+                <a class="dropdown-item" href="home2.html">Home 2</a>
+                <a class="dropdown-item" href="home3.html">Home 3</a>
               </div>
             </div>
             <li class="nav-item">
@@ -76,11 +76,11 @@
             </li>
 
             <li class="nav-item">
-              <a class="btn btn-primary" href="#">Signup</a>
+              <a class="btn btn-secondary" href="#">Signup</a>
             </li>
 
             <li class="nav-item">
-              <a class="btn btn-primary" href="#">Signin</a>
+              <a class="btn btn-secondary" href="#">Signin</a>
             </li>
           </ul>
         </div>
@@ -94,13 +94,16 @@
       style="background-image:url(img/jumbotron.jpg);"
     ></section>
 
-    <section class="container pb-5 mt--200">
+    <section class="container pb-5 mt--100">
       <div class="row justify-content-center">
         <div class="col-md-8">
           <div
             class="p-4 border border-md border-primary text-center rounded-lg"
           >
-            <h3 class="text-uppercase ">What is MonDossierBancaire ?</h3>
+            <h3 class="text-uppercase mb-3">
+              What is MonDossierBancaire ?
+            </h3>
+            <span class="dividerbr bg-secondary mb-3"></span>
             <p class="h5 font-weight-normal">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
               malesuada massa diam, sed congue sapien accumsan ac. Aliquam sit
@@ -161,7 +164,9 @@
     <section class="bg-secondary text-white pt-4 pb-4">
       <div class="container" style="max-width: 600px;">
         <h2 class="text-center">Understand MonDossierBancaire</h2>
-        <div class="text-center mb-4"><span class="dividerbr"></span></div>
+        <div class="text-center mb-4">
+          <span class="dividerbr bg-white"></span>
+        </div>
         <iframe
           width="100%"
           height="350"
@@ -176,7 +181,7 @@
     <section class="container pt-4 pb-4 testimonials-container">
       <h2 class="text-center">People using MonDossierBancaire</h2>
       <div class="text-center mb-4">
-        <span class="dividerbr bg-primary"></span>
+        <span class="dividerbr bg-secondary"></span>
       </div>
       <div class="d-flex mb-4">
         <img src="img/andy.png" class="personimg" />
@@ -189,7 +194,7 @@
           <div class="testimonials-author">
             <b>Benjamin PUGNAT</b> - MARSEILLE
           </div>
-          <span class="dividerbr bg-primary"></span>
+          <span class="dividerbr bg-secondary"></span>
         </div>
       </div>
 
@@ -204,7 +209,7 @@
           <div class="testimonials-author">
             <b>Benjamin PUGNAT</b> - MARSEILLE
           </div>
-          <span class="dividerbr bg-primary"></span>
+          <span class="dividerbr bg-secondary"></span>
         </div>
       </div>
 
@@ -219,20 +224,20 @@
           <div class="testimonials-author">
             <b>Benjamin PUGNAT</b> - MARSEILLE
           </div>
-          <span class="dividerbr bg-primary"></span>
+          <span class="dividerbr bg-secondary"></span>
         </div>
       </div>
     </section>
 
-    <footer class="bg-primary pt-3">
+    <footer class="bg-primary pt-3 text-center text-md-left">
       <div class="container">
-        <img src="img/Logo/logoblue.png" class="footerlogo" />
+        <img src="img/Logo/logolightblack.png" class="footerlogo" />
         <span class="dividerbr bg-white w-100"></span>
-        <div class="d-flex justify-content-between">
-          <p class="py-2 text-white mb-0">
+        <div class="row">
+          <div class="col-md-7 text-white mb-0 py-2">
             Legal notice © MonDossierBancaire 2020
-          </p>
-          <div>
+          </div>
+          <div class="col-md-5 text-md-right">
             <a href="" class="text-white p-2 d-inline-block"
               ><i class="fab fa-facebook-f "></i
             ></a>
