--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <title>React App</title>
+    <title>404 Page</title>
   </head>
   <body>
     <div class="container">
