--- a/home1.html
+++ b/home1.html
@@ -20,7 +20,7 @@
     <link href="fontawesome/css/all.min.css" rel="stylesheet" />
     <!-- <script defer src="fontawesome/js/all.min.js"></script> -->
 
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style1.css" />
     <title>Mon Dossier Bancaire</title>
   </head>
   <body>
@@ -29,7 +29,7 @@
     >
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img src="img/Logo/logoblue.png" class="logo-img" />
+          <img src="img/Logo/logolightblack.png" class="logo-img" />
         </a>
         <button
           class="navbar-toggler"
@@ -103,7 +103,7 @@
             <h3 class="text-uppercase mb-3">
               What is MonDossierBancaire ?
             </h3>
-            <span class="dividerbr bg-primary mb-3"></span>
+            <span class="dividerbr bg-secondary mb-3"></span>
             <p class="h5 font-weight-normal">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
               malesuada massa diam, sed congue sapien accumsan ac. Aliquam sit
@@ -181,7 +181,7 @@
     <section class="container pt-4 pb-4 testimonials-container">
       <h2 class="text-center">People using MonDossierBancaire</h2>
       <div class="text-center mb-4">
-        <span class="dividerbr bg-primary"></span>
+        <span class="dividerbr bg-secondary"></span>
       </div>
       <div class="d-flex mb-4">
         <img src="img/andy.png" class="personimg" />
@@ -194,7 +194,7 @@
           <div class="testimonials-author">
             <b>Benjamin PUGNAT</b> - MARSEILLE
           </div>
-          <span class="dividerbr bg-primary"></span>
+          <span class="dividerbr bg-secondary"></span>
         </div>
       </div>
 
@@ -209,7 +209,7 @@
           <div class="testimonials-author">
             <b>Benjamin PUGNAT</b> - MARSEILLE
           </div>
-          <span class="dividerbr bg-primary"></span>
+          <span class="dividerbr bg-secondary"></span>
         </div>
       </div>
 
@@ -224,14 +224,14 @@
           <div class="testimonials-author">
             <b>Benjamin PUGNAT</b> - MARSEILLE
           </div>
-          <span class="dividerbr bg-primary"></span>
+          <span class="dividerbr bg-secondary"></span>
         </div>
       </div>
     </section>
 
     <footer class="bg-primary pt-3 text-center text-md-left">
       <div class="container">
-        <img src="img/Logo/logoblue.png" class="footerlogo" />
+        <img src="img/Logo/logolightblack.png" class="footerlogo" />
         <span class="dividerbr bg-white w-100"></span>
         <div class="row">
           <div class="col-md-7 text-white mb-0 py-2">
