--- a/home3.html
+++ b/home3.html
@@ -20,7 +20,7 @@
     <link href="fontawesome/css/all.min.css" rel="stylesheet" />
     <!-- <script defer src="fontawesome/js/all.min.js"></script> -->
 
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style3.css" />
     <title>Mon Dossier Bancaire</title>
   </head>
   <body>
