--- a/home3.html
+++ b/home3.html
@@ -100,7 +100,7 @@
           <div
             class="p-4 border border-md border-primary text-center rounded-lg cstm-card"
           >
-            <h3 class="text-uppercase mb-3">
+            <h3 class="text-uppercase mb-3 font2">
               What is MonDossierBancaire ?
             </h3>
             <span class="dividerbr bg-primary mb-3"></span>
@@ -130,7 +130,7 @@
           <div class="shadow p-4 cstm-card">
             <div class="text-center">
               <img src="img/sur-fiable-icon.png" class="mb-3" />
-              <h4><b>Consectetur</b> adipiscing <b>elit.</b></h4>
+              <h4 class="font2"><b>Consectetur</b> adipiscing <b>elit.</b></h4>
             </div>
             <p class="text-center">
               <b>Lorem</b> ipsum dolor sit amet, consectetur adipiscing elit.
@@ -143,7 +143,7 @@
           <div class="shadow p-4 cstm-card">
             <div class="text-center">
               <img src="img/sur-fiable-icon.png" class="mb-3" />
-              <h4><b>Consectetur</b> adipiscing <b>elit.</b></h4>
+              <h4 class="font2"><b>Consectetur</b> adipiscing <b>elit.</b></h4>
             </div>
             <p class="text-center">
               <b>Lorem</b> ipsum dolor sit amet, consectetur adipiscing elit.
@@ -156,7 +156,7 @@
           <div class="shadow p-4 cstm-card">
             <div class="text-center">
               <img src="img/sur-fiable-icon.png" class="mb-3" />
-              <h4><b>Consectetur</b> adipiscing <b>elit.</b></h4>
+              <h4 class="font2"><b>Consectetur</b> adipiscing <b>elit.</b></h4>
             </div>
             <p class="text-center">
               <b>Lorem</b> ipsum dolor sit amet, consectetur adipiscing elit.
@@ -169,7 +169,7 @@
 
     <section class="bg-secondary text-white pt-4 pb-4">
       <div class="container" style="max-width: 600px;">
-        <h2 class="text-center">Understand MonDossierBancaire</h2>
+        <h2 class="text-center font2">Understand MonDossierBancaire</h2>
         <div class="text-center mb-4">
           <span class="dividerbr bg-white"></span>
         </div>
@@ -185,7 +185,7 @@
     </section>
 
     <section class="container pt-4 pb-4 testimonials-container">
-      <h2 class="text-center">People using MonDossierBancaire</h2>
+      <h2 class="text-center font2">People using MonDossierBancaire</h2>
       <div class="text-center mb-4">
         <span class="dividerbr bg-primary"></span>
       </div>
@@ -198,7 +198,7 @@
             aliquam in, volutpat sed purus.
           </div>
           <div class="testimonials-author">
-            <b>Benjamin PUGNAT</b> - MARSEILLE
+            <b class="font2">Benjamin PUGNAT</b> - MARSEILLE
           </div>
           <span class="dividerbr bg-primary"></span>
         </div>
@@ -213,7 +213,7 @@
             aliquam in, volutpat sed purus.
           </div>
           <div class="testimonials-author">
-            <b>Benjamin PUGNAT</b> - MARSEILLE
+            <b class="font2">Benjamin PUGNAT</b> - MARSEILLE
           </div>
           <span class="dividerbr bg-primary"></span>
         </div>
@@ -228,7 +228,7 @@
             aliquam in, volutpat sed purus.
           </div>
           <div class="testimonials-author">
-            <b>Benjamin PUGNAT</b> - MARSEILLE
+            <b class="font2">Benjamin PUGNAT</b> - MARSEILLE
           </div>
           <span class="dividerbr bg-primary"></span>
         </div>
