--- a/home2.html
+++ b/home2.html
@@ -28,7 +28,7 @@
       class="navbar navbar-expand-lg navbar-dark bg-primary mainheader py-0 shadow"
     >
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="/">
           <img src="img/Logo/logoblue.png" class="logo-img" />
         </a>
         <button
@@ -52,6 +52,7 @@
                 data-toggle="dropdown"
                 aria-haspopup="true"
                 aria-expanded="false"
+                href="/"
               >
                 Home
               </a>
