--- a/home1.html
+++ b/home1.html
@@ -169,9 +169,9 @@
           <span class="dividerbr bg-white"></span>
         </div>
         <iframe
-          width="100%"
+          width="560"
           height="350"
-          src="https://www.youtube.com/embed/cy5VOcuEIec"
+          src="https://www.youtube.com/embed/YE7VzlLtp-4"
           frameborder="0"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen
