--- a/home1.html
+++ b/home1.html
@@ -99,7 +99,7 @@
       <div class="row justify-content-center">
         <div class="col-md-8">
           <div
-            class="p-4 border border-md border-primary text-center rounded-lg"
+            class="p-4 border border-md border-primary text-center rounded-lg cstm-card"
           >
             <h3 class="text-uppercase mb-3 font2">
               What is MonDossierBancaire ?
