--- a/home1.html
+++ b/home1.html
@@ -81,7 +81,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="btn btn-secondary" href="#">Signin</a>
+              <a class="btn btn-outline-light" href="#">Signin</a>
             </li>
           </ul>
         </div>
