--- a/home2.html
+++ b/home2.html
@@ -77,11 +77,11 @@
             </li>
 
             <li class="nav-item">
-              <a class="btn btn-secondary" href="#">Signup</a>
+              <a class="btn btn-light" href="#">Signup</a>
             </li>
 
             <li class="nav-item">
-              <a class="btn btn-secondary" href="#">Signin</a>
+              <a class="btn btn-outline-light" href="#">Signin</a>
             </li>
           </ul>
         </div>
