--- a/home2.html
+++ b/home2.html
@@ -19,7 +19,7 @@
     <!--Font awesome -->
     <link href="fontawesome/css/all.min.css" rel="stylesheet" />
     <!-- <script defer src="fontawesome/js/all.min.js"></script> -->
-
+    <link rel="stylesheet" href="css/animate.css" />
     <link rel="stylesheet" href="css/style2.css" />
     <title>Mon Dossier Bancaire</title>
   </head>
@@ -91,15 +91,17 @@
     <div class="headerspace"></div>
 
     <section
-      class="homebanner bgcover"
+      class="homebanner bgcover d-flex justify-content-center align-items-center"
       style="background-image:url(img/jumbotron.jpg);"
-    ></section>
+    >
+      <a href="" class="btn btn-primary animated pulse">Create a bank file</a>
+    </section>
 
-    <section class="container pb-5 mt--100">
+    <section class="container pb-5 pt-4">
       <div class="row justify-content-center">
         <div class="col-md-8">
           <div
-            class="p-4 border border-md border-primary text-center rounded-lg cstm-card"
+            class="p-4 border border-md border-primary text-center rounded-lg cstm-card animated heartBeat"
           >
             <h3 class="text-uppercase mb-3 font2">
               What is MonDossierBancaire ?
@@ -122,12 +124,12 @@
       <div class="text-center mb-4">
         <img
           src="img/Logo/logowhite.png"
-          class="w-100"
+          class="w-100 animated jello"
           style="max-width: 200px;"
         />
       </div>
       <div class="row">
-        <div class="col-md-4 mb-3">
+        <div class="col-md-4 mb-3 animated heartBeat">
           <div class="text-center">
             <img src="img/sur-fiable-icon.png" class="mb-3" />
             <h4 class="font2"><b>Consectetur</b> adipiscing <b>elit.</b></h4>
@@ -138,7 +140,7 @@
           </p>
         </div>
 
-        <div class="col-md-4 mb-3">
+        <div class="col-md-4 mb-3 animated heartBeat">
           <div class="text-center">
             <img src="img/sur-fiable-icon.png" class="mb-3" />
             <h4 class="font2"><b>Consectetur</b> adipiscing <b>elit.</b></h4>
@@ -149,7 +151,7 @@
           </p>
         </div>
 
-        <div class="col-md-4 mb-3">
+        <div class="col-md-4 mb-3 animated heartBeat">
           <div class="text-center">
             <img src="img/sur-fiable-icon.png" class="mb-3" />
             <h4 class="font2"><b>Consectetur</b> adipiscing <b>elit.</b></h4>
@@ -184,7 +186,7 @@
       <div class="text-center mb-4">
         <span class="dividerbr bg-primary"></span>
       </div>
-      <div class="d-flex mb-4">
+      <div class="d-flex mb-4 animated pulse">
         <img src="img/andy.png" class="personimg" />
         <div class="w-100 px-3 font-italic">
           <div class="testimonials-quote">
@@ -199,7 +201,7 @@
         </div>
       </div>
 
-      <div class="d-flex mb-4">
+      <div class="d-flex mb-4 animated pulse">
         <img src="img/andy.png" class="personimg" />
         <div class="w-100 px-3 font-italic">
           <div class="testimonials-quote">
@@ -214,7 +216,7 @@
         </div>
       </div>
 
-      <div class="d-flex mb-4">
+      <div class="d-flex mb-4 animated pulse">
         <img src="img/andy.png" class="personimg" />
         <div class="w-100 px-3 font-italic">
           <div class="testimonials-quote">
