--- a/home3.html
+++ b/home3.html
@@ -95,7 +95,7 @@
       class="homebanner bgcover d-flex justify-content-center align-items-center"
       style="background-image:url(img/jumbotron.jpg);"
     >
-      <a href="" class="btn btn-primary animated pulse">Create a bank file</a>
+      <a href="" class="btn btn-primary animated pulse">Create a Bank File</a>
     </section>
 
     <section class="container pb-5 pt-4">
